# mrrpropy-workbench-

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PRODUCTION.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-package.yml  release-validation.yml
docs/: contributing.html  examples.html  getting-started.html  index.html  poster_mrrpropy_report.md  processing-workflow.html  references.html  typing.html  workflow.html
docs/assets/: site.css
mrrpropy/: RGB_hexagram_tutorial_for_generation.py  RaProMPro_optimized.py  RaProMPro_original.py  __init__.py  hexagram.py  processes.py  raw_class.py  utils.py
mrrpropy/analysis/: __init__.py  process_features.py  processes.py
mrrpropy/cli/: __init__.py  main.py
mrrpropy/plotting/: __init__.py  _spectra.py  processed.py  processes.py  raw.py
mrrpropy/processing/: __init__.py  raprompro.py
notebooks/: -.py  full_processing_workflow.ipynb
scripts/: benchmark_raprompro.py  build_docs.py  build_plot_examples.py  como lanzar.md  create_raw_subset.py  run_daily_chain.py  run_single_hour.py
tests/: conftest.py  test_plot_height_limits.py
tests/hexagram/: test_process_masks.py
tests/mrr/: test_10_algorithm_equivalence.py  test_11_aliasing_equivalence.py  test_2_plots_raw.py  test_3_raprompro.py  test_4_plots_raprompro.py  test_5_rain_processes.py  test_6_plot_rain_classification.py  test_7_hexagram_process.py  test_8_plot_rain_classification_in_hexagram.py  test_9_raprompro_equivalence.py
tests/rain_processes/: test_analysis_and_classification.py  test_fused_column_process_dataframe.py  test_hexagram_plot.py  test_plot_fused_process_quicklook.py  test_process_fixed_layer_plots.py  test_process_plots.py  test_process_scan_plots.py  test_trend_stats.py
tests/rain_processes/get_features/: test_context_features.py  test_micro_features.py  test_spectral_features.py
tests/raprompro/: test_processed_plots.py  test_processing.py
tests/raw_mrr/: test_load_raw.py  test_plots_raw.py
workbench/: README.md
workbench/scripts/: plot_daily_quicklooks.py  plot_one_raprompro_quicklooks.py  plot_rain_classification_regions.py  plot_rain_process_regression_details.py  plot_raprompro_histogram.py  plot_sampled_profiles.py  process_daily_raprompro.py  process_one_raprompro.py
