[project]
name = "mrrpropy"
dynamic = ["version"]
description = "Python tools for MRR-PRO loading, RaProMPro processing, plotting, and analysis."
authors = [{ name = "Juan Antonio Bravo Aranda", email = "jabravo@ugr.es" }]
requires-python = ">=3.11.11,<3.12"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["meteorology", "radar", "remote-sensing", "mrr-pro", "precipitation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=2.0.2,<2.1",
    "pandas>=2.1.2",
    "matplotlib>=3.10.0",
    "scipy>=1.13.1,<2",
    "netCDF4>=1.7.2,<2",
    "loguru>=0.7.0,<1",
    "xarray>=2025.1.2,<2026",
    "dask>=2024.11.2,<2025",
    "typer>=0.15.1,<1",
    "PyYAML>=6.0.2,<7",
    "requests>=2.32.3,<3",
    "notebook>=6.5.5,<7",
    "ipywidgets>=7.7.1,<9",
    "typing-extensions>=4.12.0,<5",
    "seaborn>=0.13.2,<0.14",
    "numba>=0.60.0,<1",
    "pyarrow>=18.1.0,<19",
    "statsmodels>=0.14.4,<0.15",
    "distributed>=2024.12.1",
    "miepython>=3.0.5",
]

[project.optional-dependencies]
docs = ["pdoc>=15.0.1,<16"]
jupyter = []

[project.urls]
Homepage = "https://github.com/jabravoaranda/mrrpropy"
Source = "https://github.com/jabravoaranda/mrrpropy"
Issues = "https://github.com/jabravoaranda/mrrpropy/issues"
Changelog = "https://github.com/jabravoaranda/mrrpropy/blob/main/CHANGELOG.md"

[project.scripts]
mrrpropy = "mrrpropy.cli.main:app"

[dependency-groups]
dev = [
    "black>=22.6.0,<23",
    "mypy>=1.11.2,<2",
    "pytest>8,<8.3.5",
    "pre-commit>=2.20.0,<3",
    "pykalman>=0.9.5,<0.10",
    "pyts>=0.11.0,<0.12",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "/LICENSE", "/pyproject.toml", "/mrrpropy", "/tests"]

[tool.hatch.build.targets.wheel]
include = ["mrrpropy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mrrpropy/__init__.py"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: exercises expensive processing or plotting workflows",
    "plot: writes diagnostic figures for manual inspection",
    "integration: covers end-to-end data workflows across multiple components",
]

[tool.mypy]
python_version = "3.11"
files = [
    # Keep the initial typed lane scoped to modules that currently pass cleanly.
    "mrrpropy/__init__.py",
    "mrrpropy/analysis",
    "mrrpropy/processing",
    "mrrpropy/utils.py",
    "mrrpropy/hexagram.py",
    "mrrpropy/plotting",
    "mrrpropy/cli",
]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true
